--- a/views/auth/register_password_error.ejs
+++ b/views/auth/register_password_error.ejs
@@ -2,74 +2,87 @@
 <html lang="en">
 <%- include('../partials/head/_head', { page: 'Register' }) %>
 
-    <body>
+<body>
 
-                <nav id="navbar">
-                    <div id="logo">quelue</div>
-                </nav>
+    <nav id="navbar">
+        <div id="logo">quelue</div>
+    </nav>
 
-        <main>
-            <div id="account-box">
-                <h3>Watch your favorite TV shows for free</h3>
-                <h3>Register for an account today!</h3>
-                <div class="account-form">
-                    <form action="/register" method="POST">
-                        <div class="form-section">
-                            <label for="username">username</label>
-                            <div class="input-field">
-                                <input 
-                                type="text"
-                                name="username" id="username" 
-                                />
-                            </div>
-                        </div>
-                        <div class="form-section">
-                            <label for="email">email</label>
-                            <div class="input-field">
-                                <input 
-                                type="email"
-                                name="email" id="email" 
-                                />
-                            </div>
-                        </div>
-                        <div class="form-section">
-                            <label for="dob">birthdate</label>
-                            <div class="input-field">
-                                <input 
-                                type="date" name="dob"
-                                id="dob" placeholder="YYYY, MM, DD" 
-                                />
-                            </div>  
-                        </div>
-                        <div class="form-section">
-                            <label for="password">password</label>
-                            <div class="input-field">
-                                <input type="password"
-                                name="password" id="password" 
-                                />
-                            </div>
-                        </div>
-                        <div class="form-section">
-                            <label for="passwordTwo">confirm password</label>
-                            <div class="input-field">
-                                <input
-                                name="passwordTwo" type="password" id="passwordTwo" />
-                            </div>
-                            
-                        </div>
-                        <p class="register-login-error">Error: Passwords do not match.</p>
-                        <div class="button-container">
-                            <button>Submit</button>
-                        </div>
-                    </form>
-                </div>
+    <main>
 
-                <div class="register-login-redirect">
-                    <a href="/login">Already have an account? Log in.</a>
-                </div>
+        <div id="account-box">
+            <h3>Watch your favorite TV shows for free</h3>
+            <h3>Register for an account today!</h3>
+
+            <!-- REGISTRATION FORM -->
+            <div class="account-form">
+                <form action="/register" method="POST">
+
+                    <div class="form-section">
+                        <label for="username">username</label>
+                        <div class="input-field">
+                            <input 
+                            type="text"
+                            name="username" id="username" 
+                            />
+                        </div>
+                    </div>
+
+                    <div class="form-section">
+                        <label for="email">email</label>
+                        <div class="input-field">
+                            <input 
+                            type="email"
+                            name="email" id="email" 
+                            />
+                        </div>
+                    </div>
+
+                    <div class="form-section">
+                        <label for="dob">birthdate</label>
+                        <div class="input-field">
+                            <input 
+                            type="date" name="dob"
+                            id="dob" placeholder="YYYY, MM, DD" 
+                            />
+                        </div>  
+                    </div>
+
+                    <div class="form-section">
+                        <label for="password">password</label>
+                        <div class="input-field">
+                            <input type="password"
+                            name="password" id="password" 
+                            />
+                        </div>
+                    </div>
+
+                    <div class="form-section">
+                        <label for="passwordTwo">confirm password</label>
+                        <div class="input-field">
+                            <input
+                            name="passwordTwo" type="password" id="passwordTwo" />
+                        </div>
+                        
+                    </div>
+
+                    <p class="register-login-error">Error: Passwords do not match.</p>
+                    
+                    <div class="button-container">
+                        <button>Submit</button>
+                    </div>
+                </form>
 
             </div>
-        </main>
-    </body>
+
+            <div class="register-login-redirect">
+                <a href="/login">Already have an account? Log in.</a>
+            </div>
+
+        </div>
+
+    </main>
+
+</body>
 
 </html>
