--- a/views/shows/index.ejs
+++ b/views/shows/index.ejs
@@ -2,10 +2,14 @@
 <html lang="en">
 <%- include('../partials/head/_head', { page: 'Shows' }) %> 
 <body>
+    <!-- NAV PARTIAL -->
     <%- include('../partials/navbar/_navbar') %>
     <main>
+
         <div class="index-page">
             <h1 class="index-header">DISCOVER TV SHOWS</h1>
+
+            <!-- LOOP TO DISPLAY ALL SHOWS -->
             <div class="index-boxes-container">
                     <% for (let idx = 0; idx < shows.length; idx++) { %> <% const show = shows[idx] %>
                     <div class="index-boxes">
@@ -16,6 +20,7 @@
                     </div>
                     <% } %>
             </div>
+            
         </div>
     </main>
 </body>
