--- a/views/shows/show.ejs
+++ b/views/shows/show.ejs
@@ -4,50 +4,53 @@
 <%- include('../partials/head/_head', { page: 'Show' }) %> 
     
 <body>
+    <!-- NAV PARTIAL -->
     <%- include('../partials/navbar/_navbar') %>
+    
     <main>
+        <!-- SERIES INFO -->
         <article class="show-show-page-container">
             <div class="show-page-container-left">
-                <h1><%= show.name %></h1>
+                <h1><%=show.name%></h1>
                 <p><%=show.description%></p>
                 <p class="episode-runtime">3 Episodes</p>
-                <form action="/users/<%= user.id %>?_method=PUT" method="POST">
 
+                <form action="/users/<%= user.id %>?_method=PUT" method="POST">
                     <input hidden name="name" value="<%= show._id %>" />
                     <button class="cta-button-green" type="submit">Add to queue</button>
                 </form>
+                
             </div>
 
             <div class="show-page-container-right">
                 <img src="<%= show.image %>" alt="" />
             </div>
-            <!-- <a href="/shows/<%= show._id %>"><h1></h1></a> -->
         </article>
 
+        <!-- SERIES EPISODE LIST -->
         <article class="episode-list-container">
             <h2>EPISODES</h2>
-                
-                    <% for (let idx=0; idx < episodes.length; idx++) { %>
-                        <% const episode=episodes[idx] %>
-                        <div class="episode-list-grid">
-                        <div class="episode-img-boxes">
-                            <img class="thumbnail" src="<%= episode.image %>" alt="" />
-                        </div>
-                        <div class="episode-info-boxes">
-                            <a href="/episodes/<%=episode.id%>" class="episode-info-link">
-                                <h2 class="episode-info-header">
-                                    <%=episode.name%>
-                                </h2>
-                            </a>
-                            
-                            <p>
-                                <%=episode.description%>
-                            </p>
-                        </div>
-                        </div>
-                            
-                </div>
-                                        <% } %>
+                <% for (let idx=0; idx < episodes.length; idx++) { %>
+                    <% const episode=episodes[idx] %>
+                    <div class="episode-list-grid">
+                    <div class="episode-img-boxes">
+                        <img class="thumbnail" src="<%= episode.image %>" alt="" />
+                    </div>
+                    <div class="episode-info-boxes">
+                        <a href="/episodes/<%=episode.id%>" class="episode-info-link">
+                            <h2 class="episode-info-header">
+                                <%=episode.name%>
+                            </h2>
+                        </a>
+                        
+                        <p>
+                            <%=episode.description%>
+                        </p>
+                    </div>
+                    </div>
+                        
+            </div>
+                                    <% } %>
             
         </article>
     </main>
